<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/offer_swipe_refresh_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".OfferListActivity"
    tools:showIn="@layout/app_bar_offer_list">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/sort_cash_back"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_background"
            android:padding="@dimen/button_padding"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/sort_by_cash"
            android:orientation="horizontal"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/sort_name"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/sort_cash_icon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:scaleType="fitCenter"
                android:src="@drawable/icons8_descending_sorting_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="2dp"
                android:text="@string/sort_by_cash"
                android:textColor="@color/textColorGrey"
                android:textSize="@dimen/button_text_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/sort_name"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:padding="@dimen/button_padding"
            android:layout_marginStart="@dimen/sort_button_margin"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_background"
            android:contentDescription="@string/sort_by_name"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintLeft_toRightOf="@id/sort_cash_back"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/sort_name_icon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:scaleType="fitCenter"
                android:src="@drawable/icons8_ascending_sorting_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/sort_by_name"
                android:textColor="@color/textColorGrey"
                android:textSize="@dimen/button_text_size" />
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/offer_list_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sort_cash_back"
            app:layout_constraintVertical_bias="1.0" />
    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.SwipeRefreshLayout>